Adding Alpha page

--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
             <div class="w-full h-full content-center px-4">
                 <nav class="visible flex flex-wrap items-center justify-between px-2 py-3 bg-green-500 rounded">
                     <div class="container px-4 mx-auto flex flex-wrap items-center justify-between">
-                        <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                                <path
-                                    d="M18 3a1 1 0 00-1.196-.98l-10 2A1 1 0 006 5v9.114A4.369 4.369 0 005 14c-1.657 0-3 .895-3 2s1.343 2 3 2 3-.895 3-2V7.82l8-1.6v5.894A4.37 4.37 0 0015 12c-1.657 0-3 .895-3 2s1.343 2 3 2 3-.895 3-2V3z" />
-                            </svg> -->
-                            <a class="text-lg font-bold  inline-block mr-4 py-2 whitespace-nowrap uppercase text-white" href="index.html"> Ear to the Ground
-                            </a>
-                            <button
-                                class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none"
-                                type="button">
-                                <span class="block relative w-6 h-px rounded-sm bg-white"></span>
-                                <span class="block relative w-6 h-px rounded-sm bg-white mt-1"></span>
-                                <span class="block relative w-6 h-px rounded-sm bg-white mt-1"></span>
-                            </button>
+                        <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
+                            <div class="flex-shrink-0 flex items-center">
+                                <a class="text-lg font-bold inline-block mr-4 py-2 whitespace-nowrap uppercase text-white" href="index.html"> Ear to
+                                    the Ground
+                                </a>
+                            </div>
+                            <div class="hidden sm:block sm:ml-7">
+                                <div class="flex space-x-4">
+                                    <a href="src/alpha.html" class="bg-gray-900 text-white px-2 py-2 rounded-md text-sm font-medium"
+                                        aria-current="page">Alpha Release</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </nav>
