--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="tailwind.css" rel="stylesheet">
+        <script src="https://d3js.org/d3.v6.min.js"></script>
+        <script src="https://unpkg.com/topojson@3"></script>
     </head>
     <body>
         <div class="w-full h-screen flex flex-wrap py-2 bg-black">
@@ -41,5 +43,6 @@
                 </div>
             </div>
         </div>
+        <script src="src/map.js"></script>
     </body>
 </html>
