Adding relative path

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <span class="block text-green-600">1. Worldwide Spotify Availability.</span>
                         </h3>
                         <div class="w-6/12 sm:w-4/12 px-4">
-                            <img src="/img/spotify_availability.png" alt="..."
+                            <img src="./img/spotify_availability.png" alt="..."
                                 class="shadow rounded max-w-full h-auto align-middle" />
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                             <span class="block text-green-600">2. Top 10 Global Streams</span>
                         </h3>
                         <div class="w-6/12 sm:w-4/12 px-4">
-                            <img src="/img/top10Global.png" alt="..." class="shadow rounded max-w-full h-auto align-middle" />
+                            <img src="./img/top10Global.png" alt="..." class="shadow rounded max-w-full h-auto align-middle" />
                         </div>
                     </div>
                     <div class="flex flex-wrap justify-center">
@@ -69,7 +69,7 @@
                             <span class="block text-green-600">2. Top 10 US Streams</span>
                         </h3>
                         <div class="w-6/12 sm:w-4/12 px-4">
-                            <img src="/img/top10US.png" alt="..." class="shadow rounded max-w-full h-auto align-middle" />
+                            <img src="./img/top10US.png" alt="..." class="shadow rounded max-w-full h-auto align-middle" />
                         </div>
                     </div>
                 </div>
