Addded different colors for different countries and some basic hover text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="https://unpkg.com/topojson@3"></script>
     </head>
     <body>
-        <div class="overflow-y-auto w-full h-screen flex flex-wrap py-2 bg-gray-700">
+        <div class="overflow-y-auto w-full h-screen flex flex-wrap py-2 bg-gray-800">
             <div class="w-full h-full content-center px-4">
                 <nav class="visible flex flex-wrap items-center justify-between px-2 py-3 bg-green-500 rounded">
                     <div class="container px-4 mx-auto flex flex-wrap items-center justify-between">
@@ -42,7 +42,7 @@
                     </p>
                 </div>
                 <div class="container mx-auto px-4 ">
-                    <svg class="ml-10 w-screen h-screen"></svg>
+                    <svg class="object-contain w-full h-screen"></svg>
                     <script src="src/map.js"></script>
                 </div>
             </div>
