Modifying csv files to remove weird first line

--- a/index.html
+++ b/index.html
@@ -44,12 +44,15 @@
                     </p>
                 </div>
                 <div class="container mx-auto px-4 ">
+                    <div class="font-mono text-center mt-12">
+                        <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2">Popular Music around the World</h6>
+                    </div>
                     <svg class="object-contain w-screen h-screen"></svg>
                     <script src="src/map.js"></script>
                 </div>
                 <div class="container mx-auto px-4 ">
                     <div class="font-mono text-center mt-12">
-                        <h6 class="text-4xl font-semibold leading-normal mb-2 text-white mb-2"> Artist Network Coming soon!</h6>
+                        <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2"> Artist Network Coming soon!</h6>
                     </div>
                 </div>
             </div>
