--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
             div.tooltip {
                 position: absolute;
                 text-align: center;
-                width: 60px;
-                height: 28px;
-                padding: 2px;
-                font: 12px sans-serif;
+                width: 1000px;
+                height: 100px;
+                padding: 5px;
+                left: 100%;
+                font: 20px sans-serif;
                 background: lightsteelblue;
                 border: 0px;
-                border-radius: 8px;
+                border-radius: 4px;
                 pointer-events: none;
             }
         </style>
