There is now a graph in the tooltip

--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
                 position: absolute;
                 text-align: center;
                 width: 1000px;
-                height: 100px;
+                height: 500px;
+                padding: 5px;
+                left: 100%;
+                font: 20px sans-serif;
+                background: lightsteelblue;
+                border: 0px;
+                border-radius: 4px;
+                pointer-events: none;
+            }
+            div.tipDiv {
+                position: absolute;
+                text-align: center;
+                width: 1000px;
+                height: 500px;
                 padding: 5px;
                 left: 100%;
                 font: 20px sans-serif;
