--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 font: 20px sans-serif;
                 background: lightsteelblue;
                 border: 0px;
-                border-radius: 4px;
+                border-radius: 8px;
                 pointer-events: none;
             }
             div.tipDiv {
@@ -35,7 +35,7 @@
                 font: 20px sans-serif;
                 background: lightsteelblue;
                 border: 0px;
-                border-radius: 4px;
+                border-radius: 8px;
                 pointer-events: none;
             }
         </style>
@@ -76,10 +76,19 @@
                 </div>
                 <div class="container mx-auto px-4 ">
                     <div class="font-mono text-center mt-12">
-                        <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2">Popular Music around the World</h6>
+                        <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2">
+                            <a href="https://spotifycharts.com/regional">Popular Music around the World</a>
+                        </h6>
                     </div>
                     <svg class="object-contain w-screen h-screen"></svg>
                     <script src="src/map.js"></script>
+                </div>
+                <div class="container mx-auto px-4 ">
+                    <div class="font-mono text-center mt-12">
+                        <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2"> Global Music Trends</h6>
+                        <svg class="object-contain w-screen h-screen"></svg>
+                        <script src="src/global_trend.js"></script>
+                    </div>
                 </div>
                 <div class="container mx-auto px-4 ">
                     <div class="font-mono text-center mt-12">
