--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
                 border-radius: 8px;
                 pointer-events: none;
             }
+            .yAxis path {
+                stroke: #ffffff;
+            }
+            .xAxis path {
+                stroke: #ffffff;
+            }
+
         </style>
     </head>
     <body>
@@ -80,13 +87,15 @@
                             <a href="https://spotifycharts.com/regional">Popular Music around the World</a>
                         </h6>
                     </div>
-                    <svg class="object-contain w-screen h-screen"></svg>
+                    <svg class="object-contain w-full h-screen"></svg>
                     <script src="src/map.js"></script>
                 </div>
                 <div class="container mx-auto px-4 ">
                     <div class="font-mono text-center mt-12">
-                        <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2"> Global Music Trends</h6>
-                        <svg class="object-contain w-screen h-screen"></svg>
+                        <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2">
+                            <a href="https://open.spotify.com/album/04m06KhJUuwe1Q487puIud?highlight=spotify:track:463CkQjx2Zk1yXoBuierM9">Levitating by Dua Lipa streams across the month of April 2021</a>
+                        </h6>
+                        <svg id="line-graph"></svg>
                         <script src="src/global_trend.js"></script>
                     </div>
                 </div>
