--- a/index.html
+++ b/index.html
@@ -12,31 +12,17 @@
             integrity="sha512-a+/SD0dbGeXTN4AA5F1dDZqsPvXKKyS1bvU2z5ElpKNJ4xQlOMUs/1+suA+j+kj5nAAya+VmT5HUKZmazluxVQ=="
             crossorigin="anonymous"></script>
         <style>
-            div.tooltip {
+            div.tooltip {   
                 position: absolute;
                 text-align: center;
-                width: 1000px;
-                height: 500px;
-                padding: 5px;
-                left: 100%;
-                font: 20px sans-serif;
+                width: 60px;
+                height: 28px;
+                padding: 2px;
+                font: 12px sans-serif;
                 background: lightsteelblue;
                 border: 0px;
                 border-radius: 8px;
-                pointer-events: none;
-            }
-            div.tipDiv {
-                position: absolute;
-                text-align: center;
-                width: 1000px;
-                height: 500px;
-                padding: 5px;
-                left: 100%;
-                font: 20px sans-serif;
-                background: lightsteelblue;
-                border: 0px;
-                border-radius: 8px;
-                pointer-events: none;
+                pointer-events: none;         
             }
             .yAxis path {
                 stroke: #ffffff;
@@ -81,13 +67,14 @@
                         favorite songs both old and new. 
                     </p>
                 </div>
-                <div class="container mx-auto px-4 ">
+                <div class="container mx-auto px-4 h-3/4">
                     <div class="font-mono text-center mt-12">
                         <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2">
                             <a href="https://spotifycharts.com/regional">Popular Music around the World</a>
                         </h6>
                     </div>
-                    <svg class="object-contain w-full h-screen"></svg>
+                    <svg id="map"></svg>
+                    <svg id="bar-graph"></svg>
                     <script src="src/map.js"></script>
                 </div>
                 <div class="container mx-auto px-4 ">
