Almost done; added tree for streams every day of the month

--- a/index.html
+++ b/index.html
@@ -77,18 +77,21 @@
                     <svg id="bar-graph"></svg>
                     <script src="src/map.js"></script>
                 </div>
-                <div class="container mx-auto px-4 ">
+                <div class="container mx-auto px-4 py-10">
                     <div class="font-mono text-center mt-12">
                         <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2">
-                            <a href="https://open.spotify.com/album/04m06KhJUuwe1Q487puIud?highlight=spotify:track:463CkQjx2Zk1yXoBuierM9">Levitating by Dua Lipa streams across the month of April 2021</a>
+                          Popular streams across the month of April 2021
                         </h6>
                         <svg id="line-graph"></svg>
                         <script src="src/global_trend.js"></script>
                     </div>
                 </div>
-                <div class="container mx-auto px-4 ">
+                <div class="space-y-10 container mx-auto px-4 py-8">
                     <div class="font-mono text-center mt-12">
-                        <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2"> Artist Network Coming soon!</h6>
+                        <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2">Monthly Stream Breakdown</h6>
+                        <svg id="dua_breakdown"></svg>
+                        <svg id="bieber_breakdown"></svg>
+                        <script src="src/breakdown.js"></script>
                     </div>
                 </div>
             </div>
