--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"
             integrity="sha512-a+/SD0dbGeXTN4AA5F1dDZqsPvXKKyS1bvU2z5ElpKNJ4xQlOMUs/1+suA+j+kj5nAAya+VmT5HUKZmazluxVQ=="
             crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"
+            integrity="sha512-wNH6xsp2n8CfB91nrBtfc4sfLwYPBMjSWVUwQOp60AYYXH6i8yCwuKFZ4rgK2i6pQek/b+bSyR7b01/922IBzQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <style>
             div.tooltip {   
                 position: absolute;
@@ -88,9 +91,8 @@
                 </div>
                 <div class="space-y-10 container mx-auto px-4 py-8">
                     <div class="font-mono text-center mt-12">
-                        <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2">Monthly Stream Breakdown</h6>
-                        <svg id="dua_breakdown"></svg>
-                        <svg id="bieber_breakdown"></svg>
+                        <h6 class="text-3xl font-semibold leading-normal mb-2 text-white mb-2">April Stream Breakdown</h6>
+                        <svg id="breakdown"></svg>
                         <script src="src/breakdown.js"></script>
                     </div>
                 </div>
